[gd_scene load_steps=2 format=3 uid="uid://i5hsvwnjosme"]

[ext_resource type="Script" uid="uid://b3qqdjbno1kal" path="res://src/ui/screens/campaign/phases/TradePhasePanel.gd" id="1_y4r2p"]

[node name="TradePhasePanel" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y4r2p")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Trade Phase"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="CreditsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Credits: 0"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="MarketLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Available Items"
horizontal_alignment = 1

[node name="AvailableItems" type="ItemList" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="InventoryLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Inventory"
horizontal_alignment = 1

[node name="InventoryItems" type="ItemList" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ItemDetails" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Select an item to view details"
fit_content = true

[node name="HSeparator5" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="BuyButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
disabled = true
text = "Buy"

[node name="SellButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
disabled = true
text = "Sell"

[node name="HSeparator6" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="CompleteButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Complete Trading"
